# covid19_etl

./: .flake8  .gitignore  covid19_tracking_ww.ipynb  docker-compose.yml  pyproject.toml
dags/: config.py  covid_19_etl.py  create_redshift_cluster.py  destroy_redshift_cluster.py  refresh_db.py  sql_queries.py
dags/redshift_utils/: create_cluster.py  destroy_cluster.py
