[tool.poetry]
name = "captsone_project_covid"
version = "0.1.0"
description = ""
authors = ["Anthony Khoudary <ankhoudary12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
matplotlib = "^3.3.0"
numpy = "^1.19.1"
seaborn = "^0.10.1"
jupyterlab = "^2.2.2"
sqlalchemy = "^1.3.18"
s3fs = "^0.4.2"
boto3 = "^1.14.41"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-docstrings = "^1.5.0"
mypy = "^0.782"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
flake8-annotations = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
